--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
